@@ -14,5 +14,6 @@ require 'active_merchant/billing/gateways/payflow'
 require 'active_merchant/billing/gateways/payflow_express'
 require 'active_merchant/billing/gateways/payflow_uk'
 require 'active_merchant/billing/gateways/payflow_express_uk'
+require 'active_merchant/billing/gateways/exact'
 require 'active_merchant/billing/gateways/data_cash'
 require 'active_merchant/billing/gateways/card_stream'
