@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Add support for the E-xact Payment Gateway [James Edward Gray II, cody]
+#
 # * Fix partially broken method of dealing with phone numbers in the PayPal Helper [cody]
 #
 # * Update remote tests for PaymentExpress [cody]
